--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -102,11 +102,19 @@ body {
             }
         }
     }
-
     .pagination {
         margin: 12px 0;
     }
+
+    .meta {
+        font-size: .9em;
+        color: #b3b3b3;
+    }
+    .reply-content {
+        margin: 6px 0;
+    }
 }
+
 
 /* Topic Index Page */
 .topics-index-page, .categories-show-page {
@@ -139,7 +147,6 @@ body {
     }
 }
 
-
 /* Topic Show Page */
 @import "topic_body";
 
@@ -153,5 +160,21 @@ body {
             font-size: 28px;
             line-height: 38px;
         }
+    }
+}
+
+.topic-reply {
+    hr {
+        margin-top: 16px;
+        margin-bottom: 16px;
+    }
+
+    a {
+        color: inherit;
+    }
+
+    .meta {
+        font-size: .9em;
+        color: #b3b3b3;
     }
 }
